# ratchet

./: .env  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  SECURITY.md  TODO.md  app-manifest.yaml  app-manifest.yml  compose.yaml  compose.yml  docker-compose.yml  go.mod  go.sum  hello.py  iTermocil.yml  justfile  pyproject.toml  requirements.txt
.cursor/rules/: otel.mdc  ratchet.mdc
.github/workflows/: app.yml  build.yml  release.yml
app/: config.py  database.py  main.py  models.py  slack_ingestion_service.py
backend/: go.mod  go.sum
backend/cmd/ratchet/: main.go
backend/internal/: bot.go
backend/internal/report/: generator.go
backend/internal/slack_integration/: slack.go
backend/internal/storage/: database.go  dev.go
backend/internal/web/: http.go  team_handlers.go
backend/tests/: channels_test.go  messages_test.go  reports_test.go
cmd/ratchet/: main.go
frontend/: .eslintrc.json  Dockerfile  next.config.js  package-lock.json  package.json  sentry.client.config.js
frontend/src/app/: page.tsx
frontend/src/components/: BackButton.tsx  ChannelHeader.tsx  ChannelList.tsx  ChannelSearch.tsx  Channels.tsx  ErrorBoundary.tsx  Layout.tsx  ReportCard.tsx  ReportList.tsx
frontend/src/types/: index.ts
internal/: bot.go  cmds.go  cmds_test.go  database.go  http.go  schema.sql  slack.go  sqlc.yaml
internal/background/: args.go  classify_messages.go  client.go  jobs.go
internal/background/backfill_thread_worker/: worker.go
internal/background/channel_info_worker/: worker.go
internal/background/channel_onboard_worker/: worker.go
internal/background/classifier_worker/: dev.go  worker.go  worker_test.go
internal/background/documentation_refresh_worker/: worker.go  worker_test.go
internal/background/ingestion_worker/: worker.go
internal/background/llm_usage_cleanup_worker/: worker.go
internal/background/llm_usage_purge_worker/: worker.go
internal/background/llm_usage_record_worker/: worker.go
internal/background/modules_worker/: worker.go
internal/background/persist_llm_usage_worker/: worker.go
internal/background/report_worker/: worker.go
internal/background/runbook_worker/: post_runbook_worker.go  update_runbook_worker.go
internal/docs/: github.go  source.go
internal/github_integration/: github.go
internal/inbuilt_tools/: client.go  client_test.go
internal/inbuilt_tools/docread/: docread.go
internal/inbuilt_tools/docsearch/: docsearch.go
internal/inbuilt_tools/docupdate/: docupdate.go
internal/inbuilt_tools/upstream_search/: upstream_search.go
internal/llm/: client.go  client_test.go  dev.go  llm.go  otel_middleware.go  otel_middleware_test.go  tool_helpers.go
internal/llm/mocks/: mock_client.go
internal/llm/providers/: manager.go  mcp.go
internal/modules/: interface.go
internal/modules/agent/: handler.go
internal/modules/channel_monitor/: README.md  channel_monitor.go  channel_monitor_test.go  http.go  http_test.go
internal/modules/classifier/: classifier.go  classifier_test.go
internal/modules/commands/: cmds.go  cmds_test.go
internal/modules/deployment_ops/: post.go
internal/modules/docrag/: doc.go  handler.go
internal/modules/docupdate/: doc.go
internal/modules/recent_activity/: compute.go
internal/modules/report/: post.go
internal/report/: generator.go  slack_formatter.go  types.go
internal/schema/: models.go  query.sql  query.sql.go
internal/slack/: slack.go
internal/slack_integration/: slack.go
internal/storage/: database.go  database_test.go  dev.go  llm_usage.go  query.sql  schema.sql  sqlc.yaml  sqlc.yml
internal/templates/: header.html  root.html  team.html  weekly_report.md
internal/tools/: inbuilt_tools.go  inbuilt_tools_test.go
internal/web/: http.go  team_handlers.go
tests/: basis_test.py  channels_test.go  conversation_test.go  database_test.go  incidents_test.go  messages_test.go  onboarding_flow_test.go  reports_test.go  setup_test.go
(+103 files in other folders)
