[project]
name = "ratchet"
version = "v2024.09.25.0"
description = "AI bot to help reduce operational toil"
authors = [
  { name = "Rajat Goel", email = "405844+rajatgoel@users.noreply.github.com" },
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "Topic :: System :: Monitoring",
  "Topic :: System :: Systems Administration",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
dependencies = [
  "aiohappyeyeballs==2.4.0",
  "aiohttp==3.10.5",
  "aioredis==2.0.1",
  "aiosignal==1.3.1",
  "annotated-types==0.7.0",
  "anyio==4.6.0",
  "async-timeout==4.0.3",
  "attrs==24.2.0",
  "certifi==2024.8.30",
  "click==8.1.7",
  "dnspython==2.6.1",
  "elastic-transport==8.15.0",
  "elasticsearch==8.15.1",
  "email_validator==2.2.0",
  "exceptiongroup==1.2.2",
  "fastapi==0.115.0",
  "fastapi-cli==0.0.5",
  "frozenlist==1.4.1",
  "greenlet==3.1.1",
  "h11==0.14.0",
  "httpcore==1.0.5",
  "httptools==0.6.1",
  "httpx==0.27.2",
  "idna==3.10",
  "itsdangerous==2.2.0",
  "Jinja2==3.1.4",
  "markdown-it-py==3.0.0",
  "MarkupSafe==2.1.5",
  "mdurl==0.1.2",
  "multidict==6.1.0",
  "orjson==3.10.7",
  "psycopg2-binary==2.9.9",
  "pydantic==2.9.2",
  "pydantic-extra-types==2.9.0",
  "pydantic-settings==2.5.2",
  "pydantic_core==2.23.4",
  "Pygments==2.18.0",
  "python-dotenv==1.0.1",
  "python-multipart==0.0.10",
  "PyYAML==6.0.2",
  "rich==13.8.1",
  "shellingham==1.5.4",
  "slack_bolt==1.20.1",
  "slack_sdk==3.33.1",
  "sniffio==1.3.1",
  "SQLAlchemy==2.0.35",
  "starlette==0.38.5",
  "typer==0.12.5",
  "typing_extensions==4.12.2",
  "ujson==5.10.0",
  "urllib3==2.2.3",
  "uvicorn==0.30.6",
  "uvloop==0.20.0",
  "watchfiles==0.24.0",
  "websockets==13.1",
  "yarl==1.11.1",
]

[tool.uv]
dev-dependencies = ["pytest-asyncio>=0.24.0", "pytest>=8.3.3", "ruff>=0.6.6"]
