[project]
name = "ratchet"
version = "v2024.09.27.0"
description = "AI bot to help reduce operational toil"
authors = [
  { name = "Rajat Goel", email = "405844+rajatgoel@users.noreply.github.com" },
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "Topic :: System :: Monitoring",
  "Topic :: System :: Systems Administration",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "python-dotenv>=1.0.1",
    "slack-bolt>=1.20.1",
    "sqlalchemy>=2.0.35",
    "uvicorn[standard]>=0.30.6",
    "aiohttp>=3.10.6",
]

[tool.uv]
dev-dependencies = ["pytest-asyncio>=0.24.0", "pytest>=8.3.3", "ruff>=0.6.6"]
